# ml-systems

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ad-click-prediction/: ad_click_prediction_xgb.ipynb
feature-store-lab/: README.md  VideoFeatureJob.scala  build.sbt  create-kafka-topic.sh  delete-kafka-topic.sh  docker-compose.yml  event_generator.py
recsys/book-recommendation/: MLproject  README.md  conda.yaml  run.py
recsys/book-recommendation-kaggle/notebooks/: matrix_factorization.ipynb  matrix_factorization_numpy.ipynb  two_tower.ipynb
recsys/book-recommendation/api/: Dockerfile  README.md  requirements.txt
recsys/book-recommendation/bookrecsys/: data.py  feat_eng.py  logger.py  preprocess.py
recsys/book-recommendation/notebooks/: eda.ipynb  feat_eng.ipynb  train_nn.ipynb  train_xgb.ipynb
sentiment-classification/: README.md  imdb_sentiment.ipynb
similar-listings/: README.md
similar-listings/scripts/: extract_sessions.py  generate_synthetic_data.py  generate_triplets.py  recommend.py  train_embeddings.py
similar-listings/similar_listings/: __init__.py
similar-listings/similar_listings/core/: __init__.py  config.py  model.py
similar-listings/similar_listings/search/: __init__.py  recommender.py
similar-listings/similar_listings/utils/: __init__.py  data.py  evaluation.py
video-search/: README.md
video-search/scripts/: build_index.py  pipeline.py  search_cli.py  search_interactive.py
video-search/video_search/: __init__.py
video-search/video_search/core/: __init__.py  config.py  encoders.py  model.py
(+15 files in other folders)
