[project]
name = "ml-systems"
version = "0.1.0"
description = "Video search system using contrastive learning"
readme = "README.md"
requires-python = ">=3.12"
# Note: Requires system dependencies: ffmpeg (for video processing)
dependencies = [
    "datasets>=4.0.0",
    "opencv-python>=4.12.0.88",
    "requests>=2.31.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
    "yt-dlp>=2025.8.22",
]
