[project]
name = "ml-systems"
version = "0.1.0"
description = "Video search system using contrastive learning"
readme = "README.md"
requires-python = ">=3.12"
# Note: Requires system dependencies: ffmpeg (for video processing)
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "mlflow>=3.4.0",
    "nbformat>=5.10.4",
    "onnx>=1.19.0",
    "onnxscript>=0.5.1",
    "opencv-python>=4.12.0.88",
    "plotly>=6.3.0",
    "requests>=2.31.0",
    "shap>=0.48.0",
    "textblob>=0.19.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
    "wandb>=0.22.0",
    "xgboost>=3.0.5",
    "ydata-profiling>=4.16.1",
    "yt-dlp>=2025.8.22",
]
